--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,16 @@
 }
 .choices li {
 }
+
+.loadingLightbox{
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    background-color: black;
+    color:white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
