--- a/src/App.css
+++ b/src/App.css
@@ -40,4 +40,13 @@
     display:flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
+}
+
+.settings{
+    position:fixed;
+    top:0;
+    right:10px;
+    z-index: 100;
+    color:gray;
 }
