--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,31 @@
 .app{
-    height:100%;
-    width:100%;
+    height:var(--winHeight);
+    width:var(--winWidth);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .boss{
     height:40%;
-    width:100%;
-    position:absolute;
+    width:95%;
     text-align: center;
     line-height: 100%;
 }
+.boss img{
+    max-width: 100%;
+    max-height:100%;
+}
 .dialogue{
+    border: 8px solid black;
     top:40%;
-    height:60%;
-    width:100%;
-    position:absolute;
+    height:55%;
+    width:95%;
 }
 
 .dialogue ul{
-    width: 100%;
+    width: 95%;
     height: 100%;
-    padding: 10%;
     display:flex;
     flex-direction: column;
     flex-wrap: wrap;
